@@ -1,0 +1,13 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Text;
+
+namespace RandM.GameSrv
+{
+    public enum TerminalType
+    {
+        Ascii,
+        Ansi,
+        Rip
+    }
+}
